[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mproxy"
version = "0.1.0"
description = "Machine Proxy metapackage"
authors = ["Rupert Nash <r.nash@epcc.ed.ac.uk>"]


[tool.poetry.dependencies]
python = "^3.7"
"mproxy.core" = { path = "src/mproxy-core" }
"mproxy.client" = { path = "src/mproxy-client" }
"mproxy.server" = { path = "src/mproxy-server" }

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-asyncio = "^0.10"
docker = "^4.0"
requests = "^2.0"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
