[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "mproxy.server"
version = "0.1.1"
description = "Machine Proxy server"
authors = ["Rupert Nash <r.nash@epcc.ed.ac.uk>"]
packages = [
    { include = "mproxy" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
aio-pika = "^6.0"
fabric = "^2.4"
"mproxy.core" = { path = "../mproxy-core" }

[tool.poetry.dev-dependencies]
pytest = "^4.0"

